# r-nacos

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  architecture.html  build.rs  chapter_1.html  cluster_deploy.html  console_api.html  deplay_env.html  faq.html  index.html  intro.html  performance.html  print.html  quick-started.html  searchindex.js  searchindex.json  test_cluster.sh  version_describe.html
.github/workflows/: build.yml  docker.yml  mdbook.yml  pre_build_docker.yml  pre_release.yml  pre_release02.yml  release.yml  run_tests.yml  trigger_docs_changes_update.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  chapter_1.md  cluster_deploy.md  console_api.md  deplay_env.md  faq.md  intro.md  performance.md  quick-started.md  version_describe.md
deploy/docker-compose/r-nacos-cluster/: .gitignore
deploy/docker-compose/r-nacos-simple/: docker-compose.yaml
deploy/helm/: values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  statefulset.yaml
deploy/k8s/helm/: Chart.yaml  values.yaml
doc/: config.sql  naming.sql
doc/conf/: .env.example
doc/sql/: r-nacos-transfer-db.sql
docker/: alpine_dockerfile  build_gnu_docker.sh  gnu_dockerfile  pre_dockerfile
docker/docker-compose/r-nacos-cluster/: docker-compose.yaml
examples/: notify_udp.rs  udp_actor.rs
integration_tests/: .gitignore
integration_tests/rust-client-test/: Cargo.toml
integration_tests/rust-client-test/tests/: lib.rs
integration_tests/scripts/: README_TOOLSPEC_TESTS.md  mcp_server_console_api_test.py  mcp_toolspec_integration_test.py  run_inject_test.py  run_mcp_server_test.py  run_mcp_toolspec_integration_test.py  run_test.py  run_toolspec_test.py  toolspec_console_api_test.py  validate_toolspec_tests.py
loadtest/: Cargo.toml  README.md
proto/: nacos_grpc_service.proto
sdk-examples/: README.md
sdk-examples/csharp/nacos-csharp-01/: .gitignore  Program.cs  README.md  appsettings.json  nacos-csharp-01.csproj
sdk-examples/java/dubbo_v2.x/: README.md  pom.xml
sdk-examples/java/dubbo_v3.x/: README.md  pom.xml
sdk-examples/java/nacos1xconfig/: pom.xml
sdk-examples/java/nacos1xnaming/: .gitignore  pom.xml
sdk-examples/java/nacos3xlock/: pom.xml
sdk-examples/java/spring-cloud-config-nacos-v3/: .gitignore  README.md  pom.xml
sdk-examples/java/spring-cloud-v2/: README.md  pom.xml
sdk-examples/java/spring-cloud-v3/: .gitignore  README.md  pom.xml
sdk-examples/python/basic_config/: config_demo.py
sdk-examples/python/basic_naming/: naming_demo.py
sdk-examples/python/calculate_api/: .gitignore  README.md  calculate_api.py  pyproject.toml
sdk-examples/rust/calculate-api/: Cargo.toml  README.md
sdk-examples/rust/calculate-api/src/: main.rs
sdk-examples/rust/nacos_rust_client/: README.md
sdk-examples/rust/nacos_rust_client/naming-register/: Cargo.toml
sdk-examples/rust/nacos_rust_client/naming-register/src/: main.rs
src/: auth.rs  cli.rs  lib.rs  main.rs  rusqlite_utils.rs  starter.rs  utils.rs  web_config.rs
src/cache/: actor_model.rs  adaptation.rs  core.rs  debug_api.rs  mod.rs  model.rs
src/cluster/: mod.rs  route.rs  routeapi.rs
src/common/: actor_utils.rs  appdata.rs  byte_utils.rs  constant.rs  crypto_utils.rs  cycle_queue.rs  datetime_utils.rs  delay_notify.rs  error_code.rs  hash_utils.rs  limiter_utils.rs  log_utils.rs  macros.rs  mod.rs  option_utils.rs  protobuf_utils.rs  rusqlite_utils.rs  sequence_utils.rs  sled_utils.rs  sqlx_utils.rs  string_utils.rs  tempfile.rs  web_utils.rs
src/common/model/: client_version.rs  mod.rs  privilege.rs
src/common/pb/: data_object.proto  data_object.rs  mod.rs  service_meta.proto  service_meta.rs  transfer.proto  transfer.rs
src/config/: api.rs  config.rs  config_db.rs  config_index.rs  config_sled.rs  config_subscribe.rs  config_type.rs  core.rs  dal.rs  metrics.rs  mod.rs  model.rs  utils.rs
src/console/: api.rs  cluster_api.rs  config_api.rs  connection_api.rs  login_api.rs  mod.rs  model.rs  naming_api.rs  raft_api.rs  transfer_api.rs  user_api.rs
src/console/middle/: login_middle.rs  mod.rs
src/console/model/: cluster_model.rs  config_model.rs  login_model.rs  mcp_server_model.rs  mcp_tool_spec_model.rs  metrics_model.rs  mod.rs  naming_model.rs  paginate.rs  raft_model.rs  user_model.rs
src/console/v2/: cluster_api.rs  config_api.rs  login_api.rs  mcp_server_api.rs  mcp_tool_spec_api.rs  metrics_api.rs  mod.rs  namespace_api.rs  naming_api.rs  user_api.rs
src/grpc/: api_model.rs  bistream_conn.rs  bistream_manage.rs  metrics.rs  mod.rs  nacos_proto.rs  server.rs
src/grpc/handler/: batch_naming_instance.rs  config_change_batch_listen.rs  config_publish.rs  config_query.rs  config_remove.rs  converter.rs  lock.rs  mod.rs  naming_batch_instance.rs  naming_instance.rs  naming_route.rs  naming_service_list.rs  naming_service_query.rs  naming_subscribe_service.rs  raft_append.rs  raft_route.rs  raft_snapshot.rs  raft_vote.rs
src/health/: core.rs  health_handler_impl.rs  mod.rs  model.rs
src/ldap/: core.rs  ldap_conn.rs  ldap_msg_actor.rs  mod.rs
src/lock/: mod.rs  model.rs
src/mcp/: core.rs  mod.rs  sse_manage.rs  transfer.rs  utils.rs
src/metrics/: core.rs  counter.rs  gauge.rs  histogram.rs  metrics_key.rs  metrics_type.rs  mod.rs  model.rs  summary.rs
src/middle/: login_middle.rs
src/namespace/: mod.rs  model.rs
src/naming/: api.rs  api_model.rs  core.rs  filter.rs  instance_meta_manager.rs  instance_meta_repository.rs  listener.rs  metrics.rs  mod.rs  model.rs  naming_debug.rs  naming_delay_nofity.rs  naming_subscriber.rs  service.rs  service_index.rs  udp_actor.rs  udp_handler.rs
src/oauth2/: core.rs  mod.rs  oauth2_msg_actor.rs
src/openapi/: auth.rs  backup.rs  constant.rs  health.rs  metrics.rs  mod.rs
src/raft/: mod.rs
src/sequence/: core.rs  mod.rs  model.rs
src/transfer/: data_to_sqlite.rs  mod.rs  model.rs  mysql_to_data.rs  openapi_to_data.rs  reader.rs  sqlite_to_data.rs  writer.rs
src/user/: api.rs  mod.rs  model.rs  permission.rs
tools/: linux-systemd-deploy.sh
(+180 files in other folders)
