[package]
name = "calculate-api"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
nacos_rust_client = "0.3"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
local_ipaddress = "0.1.3"
anyhow = "1"
env_logger = "0.7"
log = "0"
